fixes card header text alignment

--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -25,6 +25,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
     background: #ff4d4d;
     border-radius: 10px 10px 0 0;
     height: 3em;
